fixing nav button spacing

--- a/css/about.css
+++ b/css/about.css
@@ -11,7 +11,7 @@
 }
 
 .about-text {
-  font-size: 2.5rem;
+  font-size: 2.3rem;
   line-height: 3.3rem;
   max-width: 55ch;
   padding: 0 4rem 0;
